--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -85,6 +85,10 @@ outputs:
         - pango 1.*             # [linux]
         - cairo 1.14.*  # [linux]
         - glib 2.*  # [linux]
+      test:
+        commands:
+          - $R -e "print('Hello World!')"           # [not win]
+          - "\"%R%\" -e \"print('Hello World!')\""  # [win]
 
 #  - name: r-base
 #    version: {{ version }}
@@ -1105,9 +1109,9 @@ outputs:
         failure time models.
       license_family: LGPL
 
-  - name: r-client  # [linux or win]
+  - name: r-rclient  # [linux or win]
     version: '3.4.1'  # [linux or win]
-    script: install-r-client.sh  # [linux or win]
+    script: install-r-rclient.sh  # [linux or win]
     build:
       missing_dso_whitelist:
         - libmpiCC.so
@@ -1120,6 +1124,8 @@ outputs:
       host:  # [linux or win]
         - mro-base {{ version }}  # [linux or win]
         - {{ pin_subpackage('r-revoutilsmath', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-foreach', min_pin='1.2.0', max_pin=None) }}  # [linux or win]
+        - {{ pin_subpackage('r-iterators', min_pin='1.0.0', max_pin=None) }}  # [linux or win]
         - libstdcxx-ng >=7.2.0  # [linux]
         - libgcc-ng >=7.2.0  # [linux]
         - libcurl  # [linux]
@@ -1130,12 +1136,18 @@ outputs:
       run:  # [linux or win]
         - mro-base {{ version }}  # [linux or win]
         - {{ pin_subpackage('r-revoutilsmath', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-foreach', min_pin='1.2.0', max_pin=None) }}  # [linux or win]
+        - {{ pin_subpackage('r-iterators', min_pin='1.0.0', max_pin=None) }}  # [linux or win]
         - libstdcxx-ng >=7.2.0  # [linux]
         - libgcc-ng >=7.2.0  # [linux]
         - libcurl  # [linux]
         - libuuid  # [linux]
         - zlib  # [linux]
         - unixodbc  # [linux]
+    test:
+      files: test-rclient.R
+      commands:
+        - $R CMD BATCH test-rclient.R
     about:  # [linux or win]
       home: https://docs.microsoft.com/en-us/machine-learning-server/r-client/what-is-microsoft-r-client  # [linux or win]
       license: Proprietary  # [linux or win]
