--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -1110,7 +1110,7 @@ outputs:
       license_family: LGPL
 
   - name: r-rclient  # [linux or win]
-    version: '3.4.1'  # [linux or win]
+    version: '3.4.1.3.4.3'  # [linux or win]
     script: install-r-rclient.sh  # [linux or win]
     build:
       missing_dso_whitelist:
@@ -1123,9 +1123,17 @@ outputs:
     requirements:  # [linux or win]
       host:  # [linux or win]
         - mro-base {{ version }}  # [linux or win]
+        # Gotten from unpacking a broken package then:
+        # find . -name DESCRIPTION -exec cat {} \; | grep Imports -A2
         - {{ pin_subpackage('r-revoutilsmath', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-        - {{ pin_subpackage('r-foreach', min_pin='1.2.0', max_pin=None) }}  # [linux or win]
-        - {{ pin_subpackage('r-iterators', min_pin='1.0.0', max_pin=None) }}  # [linux or win]
+        - {{ pin_subpackage('r-curl', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-jsonlite', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-r6', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-tools', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-stats', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-methods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-iterators', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-foreach', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - libstdcxx-ng >=7.2.0  # [linux]
         - libgcc-ng >=7.2.0  # [linux]
         - libcurl  # [linux]
@@ -1134,10 +1142,16 @@ outputs:
         - unixodbc  # [linux]
         - openssl  # [linux]
       run:  # [linux or win]
-        - mro-base {{ version }}  # [linux or win]
         - {{ pin_subpackage('r-revoutilsmath', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-        - {{ pin_subpackage('r-foreach', min_pin='1.2.0', max_pin=None) }}  # [linux or win]
-        - {{ pin_subpackage('r-iterators', min_pin='1.0.0', max_pin=None) }}  # [linux or win]
+        - {{ pin_subpackage('r-curl', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-jsonlite', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-r6', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-tools', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-stats', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-methods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-iterators', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - {{ pin_subpackage('r-foreach', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        - mro-base {{ version }}  # [linux or win]
         - libstdcxx-ng >=7.2.0  # [linux]
         - libgcc-ng >=7.2.0  # [linux]
         - libcurl  # [linux]
