Cannot use r-tools, r-stats, r-methods as r-rclient deps, add r-microsoft-r

--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -1125,13 +1125,14 @@ outputs:
         - mro-base {{ version }}  # [linux or win]
         # Gotten from unpacking a broken package then:
         # find . -name DESCRIPTION -exec cat {} \; | grep Imports -A2
+        - {{ pin_subpackage('r-microsoftr', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-revoutilsmath', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-curl', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-jsonlite', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-r6', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-        - {{ pin_subpackage('r-tools', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-        - {{ pin_subpackage('r-stats', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-        - {{ pin_subpackage('r-methods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        # - {{ pin_subpackage('r-tools', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        # - {{ pin_subpackage('r-stats', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        # - {{ pin_subpackage('r-methods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-iterators', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-foreach', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - libstdcxx-ng >=7.2.0  # [linux]
@@ -1142,13 +1143,14 @@ outputs:
         - unixodbc  # [linux]
         - openssl  # [linux]
       run:  # [linux or win]
+        - {{ pin_subpackage('r-microsoftr', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-revoutilsmath', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-curl', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-jsonlite', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-r6', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-        - {{ pin_subpackage('r-tools', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-        - {{ pin_subpackage('r-stats', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
-        - {{ pin_subpackage('r-methods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        # - {{ pin_subpackage('r-tools', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        # - {{ pin_subpackage('r-stats', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
+        # - {{ pin_subpackage('r-methods', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-iterators', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - {{ pin_subpackage('r-foreach', min_pin='x.x.x.x.x.x', max_pin='x.x.x.x.x.x') }}  # [linux or win]
         - mro-base {{ version }}  # [linux or win]
