--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -1,4 +1,6 @@
+cran_mirror:
+  - https://mran.microsoft.com/snapshot/2018-01-01
 target_platform:
-  # - win-64
+  - win-64
   # - osx-64
-  - linux-64
+  # - linux-64
